Fixes routes and validation
